# HiGoalVita

./: .gitignore  LICENSE  NOTICE  README.md  README_zh.md  pyproject.toml
appdata/database/lancedb/defult_kg_chunks_vector.lance/_transactions/: 0-8f13d0ef-9368-4255-93f0-dbe90723b38f.txn  1-4c9457cb-482f-47b7-9dd2-3745b43cedfe.txn  10-a394452e-cfb5-4284-9ac8-43ec553768a3.txn  11-fcf8e7af-c30b-44b6-b2ec-facbc7cc7f44.txn  12-56a668da-c09d-4ded-a43c-e907730e5790.txn  13-c79edb38-f424-4676-ad6f-b1be72087471.txn  14-ec945eae-8b70-4f58-891c-beefced4c268.txn  15-9f0b0e3c-452c-4b8b-8d72-23468f37f740.txn  16-e91a7934-38eb-4b4c-b732-39972242b452.txn  17-f54c6a9f-47ae-454d-8c88-a6ec0c769fd7.txn  18-4c0b727e-845d-4673-bd0e-9caaa5073921.txn  19-e927b6b0-da5c-414f-9ec6-c721bedc4ed2.txn  2-4aeb0082-6ad0-4be2-9b08-6f562577b967.txn  20-fb381d48-3f78-4043-a466-5dcbfef8e198.txn  21-62bd04bb-de8f-41e9-8607-1c3fba370716.txn  22-8c25fe06-ac5e-475e-b6d3-c45b4fb9c9e2.txn  23-81bd6db1-42e1-4d23-aa2d-f9254c587d7e.txn  24-6b70daaa-7421-4bcb-b8b1-9aebf04553fb.txn  (+38 more)
appdata/database/sqlite/: create_sqlite_schema.py  schema.sql
datavolume/config_example/: .env_example  core_config.yaml  engine_config.yaml  model_config.yaml  system_config.yaml
datavolume/database/: init.sql
datavolume/prompts/: basic_search.yaml
docs/: frontend_api.md  installation_guide.md
higoalcore/cli/: main.py
higoalcore/config/: load_config.py
higoalcore/config/defaults/: chunking_defaults.py  input_defaults.py
higoalcore/config/enums/: index_enums.py  query_enums.py
higoalcore/config/models/: chunking_config.py  core_config.py  input_config.py
higoalcore/database/: kg_vector_store.py  kgdataloader.py
higoalcore/database/models/: graph_tables.py
higoalcore/database/relationaldb/: __init__.py  document_loader.py
higoalcore/database/vector_store/: __init__.py  ikg_operator.py  ops_chunk.py
higoalcore/index/text_splitting/: __init__.py  chunking_maker.py
higoalcore/index/text_splitting/chunk_text/: __init__.py  bootstrap.py  chunk_text.py  sequential_id.py
higoalcore/index/text_splitting/loaders/: csv_loader.py  loader_base.py  text_loader.py
higoalcore/index/text_splitting/splitter/: chinese_recursive_text_splitter.py  split_sentences.py  text_splitter.py  text_splitting_sentences.py  text_splitting_tokens.py
higoalcore/index/workflow/: extract_docs.py
higoalcore/query/: __init__.py  query.py
higoalcore/query/context/: __init__.py  factory.py
higoalcore/query/prompts/: __init__.py  construct_prompt.py  prompt_types.py
higoalengine/app/: cors_config.py  main.py  preload_manager.py
higoalengine/app/routes/: __init__.py  health_routes.py  qa_routes.py
higoalengine/app/routes/websocket/: connection_socketio.py  dispatcher.py  handler.py  streamer.py  types.py  utils.py
higoalengine/app/tasks/: __init__.py  qa_tasks.py
higoalengine/config/: load_config.py  preload.py
higoalengine/config/enums/: task_type.py
higoalengine/config/models/: api_chunk_models.py  api_models.py  engine_config.py  server_config.py  web_config.py
higoalengine/database/: models.py
higoalutils/cache/: enums.py  factory.py  json_pipeline_cache.py  memory_pipeline_cache.py  noop_pipeline_cache.py  pipeline_cache.py
higoalutils/callbacks/: console_workflow_callbacks.py  file_workflow_callbacks.py  llm_callbacks.py  noop_query_callbacks.py  noop_workflow_callbacks.py  progress_workflow_callbacks.py  query_callbacks.py  record_query_callbacks.py  reporting.py  workflow_callbacks.py  workflow_callbacks_manager.py
higoalutils/config/: load_config.py  load_model_info.py  preload.py
higoalutils/config/defaults/: base_defaults.py  embedding_defaults.py  language_model_defaults.py  sys_defaults.py
higoalutils/config/enums/: model_enums.py  sys_enums.py  time_enums.py
higoalutils/config/models/: base_config.py  config_file_config.py  embedding_config.py  error.py  langeuage_model_config.py  model_config.py  system_config.py
higoalutils/database/: database_config.py
higoalutils/database/memory_store/: base.py  dependencies.py  enums.py  factory.py  lifecycle.py  models.py  null_store.py  redis_store.py
higoalutils/database/relational_database/: base.py  dependencies.py  enums.py  factory.py  lifecycle.py  manager.py  models.py  mysql_engine.py  null_engine.py  oceanbase_engine.py  sqlite_engine.py
higoalutils/database/vector_store/: base.py  enums.py  factory.py  lancedb_store.py  lifecycle.py  models.py  null_store.py  oceanbase_store.py  utils.py
higoalutils/language_model/: __init__.py  search_result.py
higoalutils/language_model/llm/: __init__.py  base.py  embedding_model_singleton.py  get_client.py
higoalutils/language_model/llm/huggingface_embedding/: __init__.py  bge_embeddings.py  embedding.py
higoalutils/language_model/llm/oai/: __init__.py  base.py  chat_openai.py  embedding.py  openai.py  text_utils.py  typing.py
higoalutils/language_model/tokenizer/: base.py  get_tokenizer.py  types.py
higoalutils/language_model/tokenizer/dashscope_tokenizer/: __init__.py  dashscope_tokenizer.py
higoalutils/language_model/tokenizer/deepseek_v3_tokenizer/: __init__.py  deepseek_tokenizer.py
higoalutils/logger/: base.py  console.py  enums.py  factory.py  null_progress.py  print_progress.py  rich_progress.py  types.py
higoalutils/storage/: enums.py  factory.py  file_pipeline_storage.py  memory_pipeline_storage.py  pipeline_storage.py
higoalutils/utils/code_utils/: hashing.py  safe_request.py
higoalutils/utils/config_utils/: base.py  factory.py  manager.py  operation.py
higoalutils/utils/language_utils/: detect_language.py
higoalutils/utils/singleton_utils/: registry.py  singleton.py
higoalutils/utils/time_utils/: date_uitility.py  get_datetime.py  time_utils.py
vue/: README copy.md  babel.config.js  jsconfig.json  package-lock.json  package.json  tailwind.config.js  vue.config.js
vue/src/: App.vue  main.js
vue/src/components/: ChatInput.vue  HelloWorld.vue
vue/src/libs/: WebSocketManager.js  userId.js
vue/src/router/: index.js
vue/src/views/: AboutHome.vue  HomePage.vue
(+84 files in other folders)
